# jmuxer

./: .gitmodules  README.md  meson.build
src/: args.cpp  args.hpp  audio-mixer.cpp  audio-mixer.hpp  compositor-layouter  main.cpp  pad-name-parser.cpp  pad-name-parser.hpp
